implement smooth element visibiltiy

--- a/CSS_ANIMATION/02-using-css-animation/index.html
+++ b/CSS_ANIMATION/02-using-css-animation/index.html
@@ -5,8 +5,39 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Css ANIMation</title>
 		<link rel="stylesheet" href="./style.css" />
+		<script src="script.js" defer></script>
 	</head>
-	<body>
-		<h1>Css Animation</h1>
+	<body style="overflow-x: hidden">
+		<h1 class="slide-in-text">Css Animation</h1>
+		<!-- <div class="ball"></div/> -->
+		<section>
+			<p>
+				The Caterpillar and <span>Azizul</span> looked at each other for some
+				time in silence: at last the Caterpillar took the hookah out of its
+				mouth, and addressed her in a languid, sleepy voice.
+			</p>
+			<ol>
+				<li>Dogs</li>
+				<li>Cats</li>
+				<li>
+					Birds
+					<ol>
+						<li>Owls</li>
+						<li>Ducks</li>
+						<li>Flightless</li>
+					</ol>
+				</li>
+				<li>Marsupials</li>
+			</ol>
+		</section>
+		<div id="replaced">This content is replaced!</div>
+		<div class="example">
+			<h3>this is an example</h3>
+		</div>
+		
+	<div class="show-hide">
+		<h4>click on here</h4>
+		<h2 class="">This content will be  </h2>
+	</div>
 	</body>
 </html>
