--- a/'amazing-hovering-effect'/index.html
+++ b/'amazing-hovering-effect'/index.html
@@ -14,6 +14,7 @@
                 <div class="item"><img src="./images/Pose_3.webp" alt=""></div>
                 <div class="item"><img src="./images/Pose_1.webp" alt=""></div>
                 <div class="item"><img src="./images/Pose_5.webp" alt=""></div>
+                <div class="item"><img src="./images/Pose_2.webp" alt=""></div>
                 <div class="item"><img src="./images/Pose_6.webp" alt=""></div>
             </div>
 		</main>
